# NumerosPrimos

./: .gitignore  Calculadora-primos.c  Calculadora-primos.h  LICENSE  README.md  makefile  meson.build  numeros_primos.txt  números_primos.txt
include/: bruteforce.h  eratostenes.h  main.h
src/: bruteforce.c  eratostenes.c  main.c
